# python_learn

./: README.md  pyproject.toml
common/: Moudle1.py  Moudle2.py
day_01/: 02_Branch.py  03_Loop.py  04_Fun.py  05_Practice.py  Gui.py  Print.py
day_02/: 01_FunAndMoudle.py
day_03/: 01_String.py  02_List.py  03_Tuple.py  04_Gather.py  05_Dict.py  06_ClassAndObj.py  07_AdvancedObject.py  08_Slots.py  09_Extends.py  10_File.py  11_Exception.py  12_Threads.py  13_NetWork.py  14_ImageAndDoc.py
files/: sample.xlsx  test02.txt  test03.txt
